--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
     <main>
         <p>Carregando portifólios...</p>
     </main>
+    <footer>
+        &reg; Todos os direitos reservados pelos autores &copy;
+    </footer>
 </body>
 </html>
