Organizando os arquivos em pastas

--- a/html/aluno2.html
+++ b/html/aluno2.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
-    <link rel="stylesheet" href="aluno2.css">
-    <link rel="icon" type="image/png" href="IMGS/logo2.png">
+    <link rel="stylesheet" href="../style/aluno2.css">
+    <link rel="icon" type="image/png" href="../IMGS/logo2.png">
 </head>
 
 <body>
     <header class="navbar">
         <div class="logo">
-            <img src="IMGS/Star Blefis.png" alt="logo_site">
+            <img src="../IMGS/Star Blefis.png" alt="logo_site">
         </div>
 
         <nav class="menu">
@@ -26,7 +26,7 @@
 
         <div class="user-btn">
             <a href="sobreMim.html" class="user">
-                <img src="IMGS/user.png" alt="foto do usuario">
+                <img src="../IMGS/user.png" alt="foto do usuario">
                 <span>Ana Blefari</span>
             </a>
         </div>
@@ -34,7 +34,7 @@
 
     <section class="intro">
         <div class="profile-image">
-            <img src="IMGS/euuu.jpg" alt="Foto de perfil">
+            <img src="../IMGS/euuu.jpg" alt="Foto de perfil">
         </div>
 
         <div class="profile-info">
@@ -45,7 +45,7 @@
 
     <section id="curiosidades" class="section">
         <div class="image-container">
-            <img src="IMGS/curiosidades.jpg" alt="Imagem ilustrativa">
+            <img src="../IMGS/curiosidades.jpg" alt="Imagem ilustrativa">
         </div>
 
         <div class="text-container">
@@ -60,7 +60,7 @@
 
     <section id="viagens" class="section">
         <div class="image-container">
-            <img src="IMGS/viagens.jpg" alt="Imagem ilustrativa">
+            <img src="../IMGS/viagens.jpg" alt="Imagem ilustrativa">
         </div>
 
         <div class="text-container">
@@ -75,7 +75,7 @@
 
     <section id="queroConhecer" class="section">
         <div class="image-container">
-            <img src="IMGS/queroConhecer.jpg" alt="Imagem ilustrativa">
+            <img src="../IMGS/queroConhecer.jpg" alt="Imagem ilustrativa">
         </div>
 
         <div class="text-container">
@@ -90,7 +90,7 @@
 
     <section id="objetivos" class="section">
         <div class="image-container">
-            <img src="IMGS/objetivos2.png" alt="Imagem ilustrativa">
+            <img src="../IMGS/objetivos2.png" alt="Imagem ilustrativa">
         </div>
 
         <div class="text-container">
@@ -107,7 +107,7 @@
         <div class="text-container">
             <h2>FOTOS</h2>
             <section class="banner">
-                <img src="IMGS/Frame 92.png" alt="Banner destaque" />
+                <img src="../IMGS/Frame 92.png" alt="Banner destaque" />
             </section>
         </div>
     </section>
@@ -116,7 +116,7 @@
         <div class="footer-content">
             <!-- Logo -->
             <div class="footer-logo">
-                <img src="IMGS/Star Blefis.png" alt="Logo Star Blefis" class="logo-footer" />
+                <img src="../IMGS/Star Blefis.png" alt="Logo Star Blefis" class="logo-footer" />
             </div>
 
             <!-- Texto de copyright -->
