--- a/html/aluno3.html
+++ b/html/aluno3.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./aluno3.css">
-    <link rel="icon" href="./icons/logo.png">
+    <link rel="stylesheet" href="../style/aluno3.css">
+    <link rel="icon" href="../IMGS/logo.png">
     <title>Página apresentação</title>
 </head>
 
@@ -15,9 +15,9 @@
     <!-- Títulos para cada seção -->
     <!-- Linhas horizontais para divisão de seção -->
     <header>
-        <h1><a href="./index.html">Imovies</a></h1>
+        <h1><a href="../html/index.html">Imovies</a></h1>
         <nav>
-            <a href="./index.html" class="primary-button">Voltar à Home</a>
+            <a href="../html/index.html" class="primary-button">Voltar à Home</a>
         </nav>
     </header>
     <main>
@@ -37,7 +37,7 @@
         <hr>
 
         <article class="general-about-me">
-            <img src="./imgs/Caio Marcos Ambrósio Maciel 1ºE.png" alt="Imagem do criador do site">
+            <img src="../IMGS/Caio Marcos Ambrósio Maciel 1ºE.png" alt="Imagem do criador do site">
             <div>
                 <h2>Informações gerais:</h2>
                 <ul>
@@ -53,7 +53,7 @@
 
         <!-- Lista ordenada de curiosidades (nos romanos maiúsculos) -->
         <section class="curiosities">
-            <img src="./imgs/Guia mochileiro.png" alt="Amostra livro O Guia Mochileito das Galáxias">
+            <img src="../IMGS/Guia mochileiro.png" alt="Amostra livro O Guia Mochileito das Galáxias">
             <article>
                 <h2>Curiosidades:</h2>
                 <ol type="I">
@@ -72,9 +72,9 @@
         <!-- Links para a Wikipédia ou outro site que falar sobre esses lugares -->
         <section class="visited-places">
             <div>
-                <img src="./imgs/Ouro Preto.jpg" alt="Vista panorâmica de Ouro Preto, Minas Gerais">
-                <img src="./imgs/Sao Lourenco.jpg" alt="Vista panorâmica de São Lourenço, Minas Gerais">
-                <img src="./imgs/Parati.jpg" alt="Vista panorâmica de Parati, Rio de Janeiro">
+                <img src="../IMGS/Ouro Preto.jpg" alt="Vista panorâmica de Ouro Preto, Minas Gerais">
+                <img src="../IMGS/Sao Lourenco.jpg" alt="Vista panorâmica de São Lourenço, Minas Gerais">
+                <img src="../IMGS/Parati.jpg" alt="Vista panorâmica de Parati, Rio de Janeiro">
             </div>
             <article>
                 <h2>Já conheci:</h2>
@@ -91,10 +91,10 @@
         <!-- Lista ordenada -alfabética minúscula - de lugares que quer conhecer -->
         <section class="future-places">
             <div>
-                <img src="./imgs/Madrid.jpg" alt="Vista panorâmica do estádio Santiago Bernábeu, Madrid, Espanha">
-                <img src="./imgs/Starbase.jpg" alt="Vista panorâmica da Starbase da Spacex, em Boca Chica, Texas">
-                <img src="./imgs/Flórida.jpg" alt="Vista panorâmica de Cabo Canaveral, Flórida, Estados Unidos da América">
-                <img src="./imgs/Grecia.jpg" alt="Vista panorâmica de Atenas, Grécia">
+                <img src="../IMGS/Madrid.jpg" alt="Vista panorâmica do estádio Santiago Bernábeu, Madrid, Espanha">
+                <img src="../IMGS/Starbase.jpg" alt="Vista panorâmica da Starbase da Spacex, em Boca Chica, Texas">
+                <img src="../IMGS/Flórida.jpg" alt="Vista panorâmica de Cabo Canaveral, Flórida, Estados Unidos da América">
+                <img src="../IMGS/Grecia.jpg" alt="Vista panorâmica de Atenas, Grécia">
             </div>
             <article>
                 <h2>Desejo conhecer:</h2>
