--- a/html/aluno4.html
+++ b/html/aluno4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="aluno4.css">
+    <link rel="stylesheet" href="../style/aluno4.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <title>Portifólio do Lorenzo Lima</title>
 </head>
@@ -19,7 +19,7 @@
                     <li><a href="#FalaComigo">Fala comigo</a></li>
                 </ul>
             </header>
-            <img src="imgs/fotoLorenzo.png" alt="Foto do Lorenzo Lima">
+            <img src="../IMGS/fotoLorenzo.png" alt="Foto do Lorenzo Lima">
             <p id="TextoAndando">
                 <span>Lorenzo Lima de Oliveira - Profissional de TI</span>
                 <span>Lorenzo Lima de Oliveira - Profissional de TI</span>
@@ -33,7 +33,7 @@
                 <h2>Sobre mim</h2>
             </div>
             <section class="MuitoPrazer">
-                <img src="imgs/fotoSobreMim.png" alt="Foto do Lorenzo Lima de Oliveira">
+                <img src="../IMGS/fotoSobreMim.png" alt="Foto do Lorenzo Lima de Oliveira">
                 <div id="TextoMuitoPrazer">
                     <h3>Muito Prazer
                         <br>Sou Lorenzo Lima.</h3>
@@ -58,10 +58,10 @@
                         Busco a oportunidade de começar a trabalhar dentro dos grupos da empresa para o meu crescimento profissional, e até mesmo pessoal.
                     </p>
                 </div>
-                <img src="imgs/AlunosGermina.png" alt="Alunos da Germinare Tech" width="500px">
+                <img src="../IMGS/AlunosGermina.png" alt="Alunos da Germinare Tech" width="500px">
             </section>
             <section class="LocaisConheco">
-                <img src="imgs/LocaisConheco.png" alt="Imagem dos locais que conheço" width="500px">
+                <img src="../IMGS/LocaisConheco.png" alt="Imagem dos locais que conheço" width="500px">
                 <div id="TextoLocaisConheco">
                     <h3>Locais que conheço</h3>
                     <p>
@@ -100,7 +100,7 @@
                     O sonho de conhecer esses lugares nasceu ainda na infância, inspirado por influenciadores que mostravam suas vivências nesses países e pelas culturas fascinantes que sempre despertaram a minha curiosidade.
                     </p>
                 </div>
-                <img src="imgs/LocaisDesconheco.png" alt="foto dos locais que desconheço">
+                <img src="../IMGS/LocaisDesconheco.png" alt="foto dos locais que desconheço">
             </section>
         </section>
 
@@ -108,35 +108,35 @@
             <h2>Minhas especialidades</h2>
             <div id="primeirasEspecialidades">
                 <div class="especialidade">
-                    <img src="imgs/elephant 1.png" alt="Postgresql">
+                    <img src="../IMGS/elephant 1.png" alt="Postgresql">
                     <h4><strong>PostgreSQL avançado</strong></h4>
                     <p>Conhecimento da linguagem SQL no PostgreSQL avançado.</p>
                 </div>
                 <div class="especialidade">
-                    <img src="imgs/java 1.png" alt="Java">
+                    <img src="../IMGS/java 1.png" alt="Java">
                     <h4><strong>Java intermediário</strong></h4>
                     <p>Conhecimento da linguagem Java intermediário</p>
                 </div>
                 <div class="especialidade">
-                    <img src="imgs/Python-logo-notext.svg 1.png" alt="Python">
+                    <img src="../IMGS/Python-logo-notext.svg 1.png" alt="Python">
                     <h4><strong>Python intermediário</strong></h4>
                     <p>Conhecimento da linguagem Python intermediário</p>
                 </div>
             </div>
             <div id="ultimasEspecialidades">
                 <div class="especialidade">
-                    <img src="imgs/HTML5_logo_and_wordmark.svg 1.png" alt="HTML">
-                    <img src="imgs/CSS3_logo_and_wordmark.svg 1.png" alt="CSS">
+                    <img src="../IMGS/HTML5_logo_and_wordmark.svg 1.png" alt="HTML">
+                    <img src="../IMGS/CSS3_logo_and_wordmark.svg 1.png" alt="CSS">
                     <h4><strong>Website básico</strong></h4>
                     <p>Conhecimento de desenvolvimento web com HTML e CSS básico</p>
                 </div>
                 <div class="especialidade">
-                    <img src="imgs/pngwing.com (1) 1.png" alt="ShellScript">
+                    <img src="../IMGS/pngwing.com (1) 1.png" alt="ShellScript">
                     <h4><strong>Shell Script básico</strong></h4>
                     <p>Conhecimento da linguagem Shell Script básico.</p>
                 </div>
                 <div class="especialidade">
-                    <img src="imgs/R_logo.svg 1.png" alt="R">
+                    <img src="../IMGS/R_logo.svg 1.png" alt="R">
                     <h4><strong>R básico</strong></h4>
                     <p>Conhecimento da linguagem R básico.</p>
                 </div>
@@ -150,7 +150,7 @@
                     <h4><strong>ScaneIA</strong></h4>
                     <p>ScaneIA seu passado, organiza seu futuro</p>
                 </div>
-                <img src="imgs/scaneia.png" alt="Foto do ScaneIA">
+                <img src="../IMGS/scaneia.png" alt="Foto do ScaneIA">
                 <a href="https://github.com/ScaneIA"><i class="bi bi-github"></i></a>
             </div>
             <div id="AgendaContatos" class="estiloGeralProjetos">
@@ -158,7 +158,7 @@
                     <h4><strong>Agenda de contatos</strong></h4>
                     <p>Agenda de contatos pessoal</p>
                 </div>
-                <img src="imgs/agenda.png" alt="Agenda de Contatos">
+                <img src="../IMGS/agenda.png" alt="Agenda de Contatos">
                 <a href="https://github.com/LorenzoOliveira-git/Agenda_Servlet"><i class="bi bi-github"></i></a>
             </div>
             <div id="LimaFlix" class="estiloGeralProjetos">
@@ -166,7 +166,7 @@
                     <h4><strong>LimaFlix</strong></h4>
                     <p>Serviço de streaming </p>
                 </div>
-                <img src="imgs/limaFlix.png" alt="LimaFlix">
+                <img src="../IMGS/limaFlix.png" alt="LimaFlix">
                 <a href="https://github.com/LorenzoOliveira-git/LimaFLIX"><i class="bi bi-github"></i></a>
             </div>
         </section>
@@ -181,7 +181,7 @@
                     <p>Meu blog técnico tem por objetivo registrar meus estudos sobre tecnologia e ajudar outras pessoas que estão querendo aprender conceitos na área de TI.</p>
                     <a href="https://medium.com/@lorenzolimadeoliveira2010"><button id="botaoSaibaMais">Saiba Mais</button></a>
                 </div>
-                <img src="imgs/medium.png" alt="Foto do medium do Lorenzo Lima de Oliveira">
+                <img src="../IMGS/medium.png" alt="Foto do medium do Lorenzo Lima de Oliveira">
             </div>
         </section>
         <div id="FinalPagina">
