--- a/html/aluno1.html
+++ b/html/aluno1.html
@@ -9,15 +9,16 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-    <link rel="stylesheet" href="aluno1.css">
+    <link rel="stylesheet" href="../style/aluno1.css">
+    <link rel="shortcut icon" href="../IMGS/favicon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="aluno1.js" defer></script>
+    <script src="../script/aluno1.js" defer></script>
     <title>Meu Primeiro Portifólio - 2025</title>
 </head>
 <body>
     <header>
         <div id="logo">
-            <img width="80rem" src="IMGS/favicon.png" alt="A logotype with a basketbal ball, a green circle around them and two symbols, plus(+) and minus(-)">
+            <img width="80rem" src="../IMGS/favicon.png" alt="A logotype with a basketbal ball, a green circle around them and two symbols, plus(+) and minus(-)">
         </div>
 
         <ul id="normal-link">
@@ -46,10 +47,10 @@
             </ul>
         </div>
         <div id="photo">
-            <img width="340rem" src="IMGS/FotoEmpresarial.jpg" alt="There is a Ryan picture. He's wearing a black smocking, because at this photo he was in a 15's birthday">
+            <img width="340rem" src="../IMGS/FotoEmpresarial.jpg" alt="There is a Ryan picture. He's wearing a black smocking, because at this photo he was in a 15's birthday">
     </main>
     <article id="about-me">
-        <img width="460rem" src="IMGS/coding.JPEG" alt="There is a picture of my computer when I'm was programming">
+        <img width="460rem" src="../IMGS/coding.JPEG" alt="There is a picture of my computer when I'm was programming">
         <div id="text">
             <h3>SOBRE MIM</h3>
             <p>Eu sou o Ryan, tenho 15 anos e estou no meu primeiro ano do ensino médio técnico em ADS na Germinare TECH do Instituto J&F.</p>
@@ -125,7 +126,7 @@
                     <a href="https://ryancursinom.github.io/Site-de-Dia-das-Maes/" target="_blank">Link do projeto</a>
                 </div>
                 <div class="project">
-                    <img src="IMGS/calculator.png"></iframe>
+                    <img src="../IMGS/calculator.png"></iframe>
                     <p>Calculadora Básica</p>
                     <p>27/07/2025</p>
                     <ul>
@@ -136,7 +137,7 @@
                     <a href="https://ryancursinom.github.io/Calculadora-Basica/" target="_blank">Link do projeto</a>
                 </div>
                 <div class="project">
-                    <img src="IMGS/iaraCrud.png"></img>
+                    <img src="../IMGS/iaraCrud.png"></img>
                     <p>CRUD do IARA ( em dupla com o <a href="https://github.com/lucasdonini" style="color: skyblue;" target="_blank">Lucas Kluska</a>)</p>
                     <p>03/09/2025</p>
                     <ul>
@@ -148,7 +149,7 @@
                     <a href="https://github.com/ryancursinom/iara-landing.git" target="_blank">Link do projeto</a>
                 </div>
                 <div class="project">
-                    <img src="IMGS/digitalAgency.png" alt="">
+                    <img src="../IMGS/digitalAgency.png" alt="">
                     <p>Projeto Final - Curso de HTML e CSS do <a href="https://www.youtube.com/playlist?list=PL2Fdisxwzt_fqPM6MOwi2zXsbfV1j11kc" style="color: skyblue;">Programação WEB</a></p>
                     <p>25/05/2025</p>
                     <ul>
