--- a/html/aluno5.html
+++ b/html/aluno5.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="aluno5.css">
+        <link rel="stylesheet" href="../style/aluno5.css">
         <title>UOU</title>
-        <link rel="icon" type="image/png" href="imgs/eu.jpg">
+        <link rel="icon" type="image/png" href="../IMGS/eu.jpg">
     </head>
     <body>
         <h1></h1>
