--- a/html/aluno1.html
+++ b/html/aluno1.html
@@ -26,7 +26,7 @@
             <li><a href="#curiosities">Curiosidades</a></li>
             <li><a href="#lists">Sonhos</a></li>
             <li><a href="#projects">Projetos</a></li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
         </ul>
 
     </header>
