--- a/html/aluno3.html
+++ b/html/aluno3.html
@@ -15,9 +15,9 @@
     <!-- Títulos para cada seção -->
     <!-- Linhas horizontais para divisão de seção -->
     <header>
-        <h1><a href="../html/index.html">Imovies</a></h1>
+        <h1><a href="../index.html">Imovies</a></h1>
         <nav>
-            <a href="../html/index.html" class="primary-button">Voltar à Home</a>
+            <a href="../index.html" class="primary-button">Voltar à Home</a>
         </nav>
     </header>
     <main>
