Ùltimas alterações de caminho no index.html

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Coletivo - Rocket</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
         <h1>Portfólio Coletivo Rocket</h1>
         <nav>
             <ul id="menu">
-                <li><a href="aluno1.html">Portfólio Ryan</a></li>
-                <li><a href="aluno2.html">Portfólio Ana Blefari</a></li>
-                <li><a href="aluno4.html">Portifólio Lorenzo Lima de Oliveira</a></li>
-                <li><a href="aluno5.html">Portfólio Line</a></li> 
-                <li><a href="aluno3.html">Caio Marcos Ambrósio Maciel</a></li>
+                <li><a href="html/aluno1.html">Portfólio Ryan</a></li>
+                <li><a href="html/aluno2.html">Portfólio Ana Blefari</a></li>
+                <li><a href="html/aluno3.html">Caio Marcos Ambrósio Maciel</a></li>
+                <li><a href="html/aluno4.html">Portifólio Lorenzo Lima de Oliveira</a></li>
+                <li><a href="html/aluno5.html">Portfólio Line</a></li> 
             </ul>
         </nav>
     </header>
