Mudando as extesões de *.png e *jepg, para conectar o *.jpg

--- a/html/aluno1.html
+++ b/html/aluno1.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="../style/aluno1.css">
-    <link rel="shortcut icon" href="../IMGS/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../IMGS/favicon.jpg" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../script/aluno1.js" defer></script>
     <title>Meu Primeiro Portifólio - 2025</title>
@@ -18,8 +18,8 @@
 <body>
     <header>
         <div id="logo">
-            <img width="80rem" src="../IMGS/favicon.png" alt="A logotype with a basketbal ball, a green circle around them and two symbols, plus(+) and minus(-)">
-        </div>
+            <img width="80rem" src="../IMGS/favicon.jpg" alt="A logotype with a basketbal ball, a green circle around them and two symbols, plus(+) and minus(-)">
+        </div>jpeg
 
         <ul id="normal-link">
             <li><a href="#about-me">Sobre mim</a></li>
@@ -126,7 +126,7 @@
                     <a href="https://ryancursinom.github.io/Site-de-Dia-das-Maes/" target="_blank">Link do projeto</a>
                 </div>
                 <div class="project">
-                    <img src="../IMGS/calculator.png"></iframe>
+                    <img src="../IMGS/calculator.jpg"></iframe>
                     <p>Calculadora Básica</p>
                     <p>27/07/2025</p>
                     <ul>
@@ -137,7 +137,7 @@
                     <a href="https://ryancursinom.github.io/Calculadora-Basica/" target="_blank">Link do projeto</a>
                 </div>
                 <div class="project">
-                    <img src="../IMGS/iaraCrud.png"></img>
+                    <img src="../IMGS/iaraCrud.jpg"></img>
                     <p>CRUD do IARA ( em dupla com o <a href="https://github.com/lucasdonini" style="color: skyblue;" target="_blank">Lucas Kluska</a>)</p>
                     <p>03/09/2025</p>
                     <ul>
@@ -149,7 +149,7 @@
                     <a href="https://github.com/ryancursinom/iara-landing.git" target="_blank">Link do projeto</a>
                 </div>
                 <div class="project">
-                    <img src="../IMGS/digitalAgency.png" alt="">
+                    <img src="../IMGS/digitalAgency.jpg" alt="">
                     <p>Projeto Final - Curso de HTML e CSS do <a href="https://www.youtube.com/playlist?list=PL2Fdisxwzt_fqPM6MOwi2zXsbfV1j11kc" style="color: skyblue;">Programação WEB</a></p>
                     <p>25/05/2025</p>
                     <ul>
