--- a/html/aluno2.html
+++ b/html/aluno2.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
     <link rel="stylesheet" href="../style/aluno2.css">
-    <link rel="icon" type="image/png" href="../IMGS/logo2.png">
+    <link rel="icon" type="image/jpg" href="../IMGS/logo2.jpg">
 </head>
 
 <body>
     <header class="navbar">
         <div class="logo">
-            <img src="../IMGS/Star Blefis.png" alt="logo_site">
+            <img src="../IMGS/Star Blefis.jpg
+    " alt="logo_site">
         </div>
 
         <nav class="menu">
@@ -26,7 +27,8 @@
 
         <div class="user-btn">
             <a href="sobreMim.html" class="user">
-                <img src="../IMGS/user.png" alt="foto do usuario">
+                <img src="../IMGS/user.jpg
+        " alt="foto do usuario">
                 <span>Ana Blefari</span>
             </a>
         </div>
@@ -90,7 +92,8 @@
 
     <section id="objetivos" class="section">
         <div class="image-container">
-            <img src="../IMGS/objetivos2.png" alt="Imagem ilustrativa">
+            <img src="../IMGS/objetivos2.jpg
+    " alt="Imagem ilustrativa">
         </div>
 
         <div class="text-container">
@@ -107,7 +110,8 @@
         <div class="text-container">
             <h2>FOTOS</h2>
             <section class="banner">
-                <img src="../IMGS/Frame 92.png" alt="Banner destaque" />
+                <img src="../IMGS/Frame 92.jpg
+        " alt="Banner destaque" />
             </section>
         </div>
     </section>
@@ -116,7 +120,8 @@
         <div class="footer-content">
             <!-- Logo -->
             <div class="footer-logo">
-                <img src="../IMGS/Star Blefis.png" alt="Logo Star Blefis" class="logo-footer" />
+                <img src="../IMGS/Star Blefis.jpg
+        " alt="Logo Star Blefis" class="logo-footer" />
             </div>
 
             <!-- Texto de copyright -->
