--- a/html/aluno3.html
+++ b/html/aluno3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/aluno3.css">
-    <link rel="icon" href="../IMGS/logo.png">
+    <link rel="icon" href="../IMGS/logo.jpg">
     <title>Página apresentação</title>
 </head>
 
@@ -37,7 +37,7 @@
         <hr>
 
         <article class="general-about-me">
-            <img src="../IMGS/Caio Marcos Ambrósio Maciel 1ºE.png" alt="Imagem do criador do site">
+            <img src="../IMGS/Caio Marcos Ambrósio Maciel 1ºE.jpg" alt="Imagem do criador do site">
             <div>
                 <h2>Informações gerais:</h2>
                 <ul>
@@ -53,7 +53,7 @@
 
         <!-- Lista ordenada de curiosidades (nos romanos maiúsculos) -->
         <section class="curiosities">
-            <img src="../IMGS/Guia mochileiro.png" alt="Amostra livro O Guia Mochileito das Galáxias">
+            <img src="../IMGS/Guia mochileiro.jpg" alt="Amostra livro O Guia Mochileito das Galáxias">
             <article>
                 <h2>Curiosidades:</h2>
                 <ol type="I">
